--- a/UWCourseGoose/res/values/strings.xml
+++ b/UWCourseGoose/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="app_name">UW Course Goose</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="courseDescription">Introduction to Accounting</string>
+    <string name="courseTitle">AFM 101</string>
 
 </resources>
