--- a/UWCourseGoose/res/values/strings.xml
+++ b/UWCourseGoose/res/values/strings.xml
@@ -7,4 +7,9 @@
     <string name="courseDescription">Introduction to Accounting</string>
     <string name="courseTitle">AFM 101</string>
 
+    <string-array name="eng_array">
+        <item>SYDE 101</item>
+        <item>SYDE 111</item>
+    </string-array>
+    
 </resources>
